devtools/laymos/test/fixtures/story-ejection/invalid/re-export.ts
export { flow as narrate } from 'laymos/story';
